--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -143,14 +143,14 @@ $light-green: #f0f5f1; // Light green background
 
 .header {
   position: fixed;
-  top: 35px; /* Adjusted top position */
+  top: 35px;
   left: 0;
   width: 100%;
   z-index: 998;
   transition: all 0.3s ease;
   padding: 15px 0;
-  background-color: #fff;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  background-color: transparent;
+  box-shadow: none;
   overflow: visible;
 
   @media (max-width: 768px) {
